--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,240 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap");
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* ::-webkit-scrollbar {
+  display: none;
+} */
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Nunito Sans", sans-serif;
+}
+.App {
+  min-height: 100vh;
+}
+
+.bck-btn {
+  text-decoration: none;
+  width: 100px;
+  height: 35px;
+  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+  border-radius: 5px;
+  margin-bottom: 50px;
+}
+
+header {
+  height: 80px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0px 150px;
+}
+
+.header-text {
+  font-size: 1.2rem;
+}
+
+.dark-mode {
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.theme-switcher {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.light {
+  background-color: white;
+  color: black;
+}
+
+.dark {
+  background-color: #2b3945;
+  color: white;
+}
+
+.main {
+  padding: 50px 150px;
+}
+
+.light-main {
+  background-color: rgb(238, 238, 238);
+  color: black;
+}
+
+.dark-main {
+  background-color: #202c37;
+  color: white;
+}
+
+.card {
+  display: block;
+  text-decoration: none;
+  padding-bottom: 20px;
+  border-radius: 0.3rem;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  row-gap: 70px;
+  column-gap: 40px;
+}
+
+.image {
+  width: 100%;
+  height: 170px;
+  border-top-right-radius: 0.3rem;
+  border-top-left-radius: 0.3rem;
+}
+
+.card > h3 {
+  margin: 10px 0 15px 20px;
+}
+.card > h4 {
+  margin: 0 0 0 20px;
+  font-size: 14px;
+  font-weight: 600;
+}
+
+.card > h4 > span {
+  font-weight: 400;
+}
+
+.det-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.det-img {
+  width: 500px;
+  height: 350px;
+}
+
+.params {
+  width: 550px;
+}
+
+.details {
+  margin-top: 20px;
+  margin-bottom: 40px;
+  font-weight: 600;
+}
+
+.details > div {
+  margin-bottom: 8px;
+}
+
+.details > div > span {
+  font-weight: 400;
+}
+
+.border {
+  font-weight: 600;
+  margin-right: 10px;
+}
+
+.borders {
+  font-weight: 400;
+  width: 55px;
+  height: 24px;
+  margin-right: 10px;
+  margin-bottom: 5px;
+  border: none;
+  font-size: 14px;
+  text-transform: lowercase;
+  border-radius: 3px;
+}
+
+.input-holder {
+  display: flex;
+  margin-bottom: 50px;
+}
+
+.search-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 60px;
+  height: 40px;
+  border-bottom-left-radius: 0.4rem;
+  border-top-left-radius: 0.4rem;
+}
+
+.input {
+  border: none;
+  width: 300px;
+  border-bottom-right-radius: 0.4rem;
+  border-top-right-radius: 0.4rem;
+}
+
+.input:focus {
+  outline: none;
+}
+
+@media (max-width: 600px) {
+  header {
+    padding: 0px 25px;
+  }
+
+  .main {
+    padding: 30px 25px;
+  }
+
+  .card {
+    padding-bottom: 20px;
+  }
+
+  .grid {
+    grid-template-columns: repeat(1, 1fr);
+    row-gap: 60px;
+    padding: 0 30px;
+  }
+
+  .det-img {
+    max-width: 340px;
+    height: 225px;
+  }
+
+  .det-container {
+    display: block;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .params {
+    max-width: 343px;
+    margin-top: 20px;
+  }
+
+  .details {
+    margin-top: 25px;
+    margin-bottom: 45px;
+  }
+
+  .details > div {
+    margin-bottom: 10px;
+  }
+
+  .search-icon {
+    height: 45px;
+    font-size: 16px;
+  }
 }
